kube/zadanie_2/deployment-backend.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080
...
