kube/zadanie_2/pv-pvc.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange-pvc
  template:
    metadata:
      labels:
        app: data-exchange-pvc
    spec:

      containers:
        - name: busybox
          image: busybox
          command: ['sh', '-c', 'while true; do echo "test" >> /tmp/data/success.txt; sleep 5; done']
          volumeMounts:
            - name: vol-shared
              mountPath: /tmp/data

        - name: multitool
          image: wbitt/network-multitool:latest
          volumeMounts:
            - name: vol-shared
              mountPath: /tmp/data


      volumes:
        - name: vol-shared
          persistentVolumeClaim:
            claimName: pvc-minikube

...
