kube/zadanie_2/service-backend.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: multitool-port
      protocol: TCP
      port: 9002
      targetPort: 8080

...
