kube/zadanie_2/service-frontend.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: nginx-port
      protocol: TCP
      port: 9001
      targetPort: 80

...
